[gd_scene load_steps=27 format=2]

[ext_resource path="res://Game.gd" type="Script" id=1]
[ext_resource path="res://FX/Scenes/ScreenShaker.tscn" type="PackedScene" id=2]
[ext_resource path="res://World.tscn" type="PackedScene" id=3]
[ext_resource path="res://Camera/Scene/GrindSnapper.tscn" type="PackedScene" id=4]
[ext_resource path="res://PlayerUI.gd" type="Script" id=5]
[ext_resource path="res://UI/Scenes/PlayerLifebar.tscn" type="PackedScene" id=6]
[ext_resource path="res://UI/Sprites/KABANG!_UI_MAGAZINE.png" type="Texture" id=7]
[ext_resource path="res://UI/Scenes/LifebarBuilder.tscn" type="PackedScene" id=8]
[ext_resource path="res://FX/Scripts/ScreenFX.gd" type="Script" id=9]
[ext_resource path="res://FX/Sprites/ScreenFX/ScreenFlare01_0007_1.png" type="Texture" id=10]
[ext_resource path="res://FX/Sprites/ScreenFX/ScreenFlare01_0006_2.png" type="Texture" id=11]
[ext_resource path="res://FX/Sprites/ScreenFX/ScreenFlare01_0005_3.png" type="Texture" id=12]
[ext_resource path="res://FX/Sprites/ScreenFX/ScreenFlare01_0004_4.png" type="Texture" id=13]
[ext_resource path="res://FX/Sprites/ScreenFX/ScreenFlare01_0003_5.png" type="Texture" id=14]
[ext_resource path="res://FX/Sprites/ScreenFX/ScreenFlare01_0002_6.png" type="Texture" id=15]
[ext_resource path="res://FX/Sprites/ScreenFX/ScreenFlare01_0001_7.png" type="Texture" id=16]
[ext_resource path="res://FX/Sprites/ScreenFX/ScreenFlare01_0000_8.png" type="Texture" id=17]
[ext_resource path="res://FX/Sprites/ScreenFX/ScreenFlare01_0009_ZWART_BOVEN.png" type="Texture" id=18]
[ext_resource path="res://FX/Sprites/ScreenFX/ScreenFlare01_0008_ZWART_ONDER.png" type="Texture" id=19]
[ext_resource path="res://FX/Sprites/ScreenFX/ScreenFlare01_0010_WIT_MIDDEN.png" type="Texture" id=20]
[ext_resource path="res://FX/Scripts/Glitch.gd" type="Script" id=21]

[sub_resource type="Environment" id=1]
background_mode = 4
background_energy = 16.0
ambient_light_energy = 0.0
ambient_light_sky_contribution = 0.0
fog_color = Color( 1, 0, 0, 1 )
fog_sun_color = Color( 1, 1, 1, 1 )
fog_sun_amount = 1.0
fog_depth_enabled = false
fog_transmit_enabled = true
auto_exposure_scale = 0.15
auto_exposure_min_luma = 0.38
dof_blur_far_distance = 8192.0
glow_enabled = true
glow_levels/2 = true
glow_levels/5 = false
glow_intensity = 1.0
glow_strength = 0.85
glow_bloom = 0.85
glow_blend_mode = 0
glow_hdr_scale = 1.0
adjustment_contrast = 1.5
adjustment_saturation = 2.5

[sub_resource type="CanvasItemMaterial" id=2]
blend_mode = 1

[sub_resource type="CanvasItemMaterial" id=3]
blend_mode = 1

[sub_resource type="SpriteFrames" id=4]
animations = [ {
"frames": [ null, ExtResource( 10 ), ExtResource( 11 ), ExtResource( 12 ), ExtResource( 13 ), ExtResource( 14 ), ExtResource( 15 ), ExtResource( 16 ), ExtResource( 17 ) ],
"loop": false,
"name": "Flare",
"speed": 20.0
} ]

[sub_resource type="Animation" id=5]
resource_name = "Flare"
length = 4.0
loop = true
step = 1.0
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1, 2, 3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 0.0784314 ), Color( 1, 1, 1, 0.196078 ), Color( 1, 1, 1, 0.0784314 ) ]
}

[node name="Game" type="Node2D"]
script = ExtResource( 1 )

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource( 1 )

[node name="ScreenShaker" parent="." instance=ExtResource( 2 )]

[node name="World" parent="." instance=ExtResource( 3 )]
material = SubResource( 2 )
GRAVITY = 200
MAX_GRAVITY = 5000
GLIDE_RATIO = 0.8

[node name="GridSnapper" parent="." instance=ExtResource( 4 )]
editor/display_folded = true
position = Vector2( -1120, 208 )

[node name="UserInterface" type="CanvasLayer" parent="."]
editor/display_folded = true

[node name="PlayerUI" type="Control" parent="UserInterface"]
editor/display_folded = true
material = SubResource( 3 )
margin_right = 1280.0
margin_bottom = 640.0
script = ExtResource( 5 )

[node name="PlayerLifebar" parent="UserInterface/PlayerUI" instance=ExtResource( 6 )]
margin_left = 268.0
margin_top = 52.0
margin_right = 268.0
margin_bottom = 52.0
rect_scale = Vector2( 4, 4 )

[node name="PlayerAmmo" type="Container" parent="UserInterface/PlayerUI"]
editor/display_folded = true
visible = false
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -156.0
margin_top = -156.0

[node name="TextureRect" type="TextureRect" parent="UserInterface/PlayerUI/PlayerAmmo"]
margin_right = 70.0
margin_bottom = 70.0
rect_scale = Vector2( 2, 2 )
texture = ExtResource( 7 )
expand = true
stretch_mode = 2

[node name="LifebarBuilder" parent="UserInterface" instance=ExtResource( 8 )]
position = Vector2( 0, 1 )

[node name="ScreenFX" type="Node2D" parent="UserInterface"]
editor/display_folded = true
script = ExtResource( 9 )

[node name="LensFlare" type="AnimatedSprite" parent="UserInterface/ScreenFX"]
editor/display_folded = true
modulate = Color( 0.68078, 0.591398, 1, 0.0392157 )
frames = SubResource( 4 )
animation = "Flare"
centered = false

[node name="Tween" type="Tween" parent="UserInterface/ScreenFX/LensFlare"]

[node name="AnimationPlayer" type="AnimationPlayer" parent="UserInterface/ScreenFX/LensFlare"]

[node name="Glitch1" type="Sprite" parent="UserInterface/ScreenFX"]
editor/display_folded = true
visible = false
modulate = Color( 1, 1, 1, 0.0980392 )
texture = ExtResource( 18 )
centered = false

[node name="Tween" type="Tween" parent="UserInterface/ScreenFX/Glitch1"]

[node name="AnimationPlayer" type="AnimationPlayer" parent="UserInterface/ScreenFX/Glitch1"]

[node name="Glitch2" type="Sprite" parent="UserInterface/ScreenFX"]
editor/display_folded = true
visible = false
texture = ExtResource( 19 )
centered = false

[node name="Tween" type="Tween" parent="UserInterface/ScreenFX/Glitch2"]

[node name="AnimationPlayer" type="AnimationPlayer" parent="UserInterface/ScreenFX/Glitch2"]

[node name="Glitch3" type="Sprite" parent="UserInterface/ScreenFX"]
editor/display_folded = true
visible = false
modulate = Color( 1, 1, 1, 0.0920454 )
texture = ExtResource( 20 )
centered = false
script = ExtResource( 21 )

[node name="Tween" type="Tween" parent="UserInterface/ScreenFX/Glitch3"]

[node name="AnimatedSprite" type="AnimationPlayer" parent="UserInterface/ScreenFX/Glitch3"]
playback_speed = 20.0
anims/Flare = SubResource( 5 )

[node name="FX_timer" type="Timer" parent="UserInterface/ScreenFX"]
one_shot = true
autostart = true

[connection signal="animation_finished" from="UserInterface/ScreenFX/LensFlare" to="UserInterface/ScreenFX" method="_on_LensFlare_animation_finished"]
[connection signal="timeout" from="UserInterface/ScreenFX/FX_timer" to="UserInterface/ScreenFX" method="_on_FX_timer_timeout"]

[editable path="GridSnapper"]
